# thanatosmfroc-cgol

./: .gitignore  Cargo.toml
benches/: simulation.rs
docs/: architecture.md  mfroc.md
src/: canonical.rs  lib.rs  main.rs  orchestration.rs  thanatoscore.rs
src/conway/: conway.rs  mod.rs  simulation.rs
src/mfrac/: canonical.rs  mfrac.rs  mod.rs  pipeline.rs
src/mfroc/: mod.rs  pipeline.rs
src/persistence/: database.rs  mod.rs
src/thanatos/: mod.rs  tmfroc.rs
src/types/: canonical_configuration.rs  cell_configuration.rs  cell_coord.rs  mfrac_report.rs  mod.rs
src/ui/: app.rs  mod.rs
