[package]
name = "thanatos"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam = "0.8.4"
eframe = { version = "0.33.3", features = ["wgpu"] }
egui = "0.33.3"
fxhash = "0.2.1"
hashbrown = "0.16.1"
rand = "0.10.0-rc.9"
sled = "0.34.7"
wyhash = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
postcard = { version = "1.1.3", features = ["alloc"] }

[target.'cfg(unix)'.dependencies]
pprof = { version = "0.15.0", features = ["flamegraph"] }

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "simulation"
harness = false
